<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yoin</string>
    <string name="title_activity_main">Yoin</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">yoin_user</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Scanner</string>
    <string name="title_section2">You</string>
    <string name="title_section3">Contacts</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="number">Phone Number</string>
    <string name="send">Update</string>
    <string name="linkedin">Linkedin</string>
    <string name="edit_message">Namn</string>
    <string name="title_section4">QR</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="qr_code">QR code</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="context_menu">
        <item>Export to phone</item>
        <item>Remove</item>
    </string-array>
    <string name="app_label">Yoin</string>
    <string name="search_hint">Search cards</string>
    <string name="title_activity_search">Search</string>
    <string name="menu_search">Search</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_scanner">Scanner</string>
    <string name="nav_you">You</string>
    <string name="title_activity_update_personal_data">UpdatePersonalData</string>

</resources>
