<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"/>
    <EditText
        android:id="@+id/last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name" />
    <EditText
        android:id="@+id/mail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail" />
    <EditText
        android:id="@+id/number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number" />
    <EditText
        android:id="@+id/linkedin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/linkedin" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="saveInput"
        android:text="@string/send" />
    <ImageView
        android:id="@+id/qr_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="left"
        android:src="@drawable/ic_launcher"
    	android:background="@android:color/white"
    	android:contentDescription="@string/qr_code"
    	android:padding="10dp"
    	android:scaleType="fitStart"
    	android:adjustViewBounds="true"  />
        
</LinearLayout>