<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".MainActivity" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/nav_scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_scanner" />

        <Button
            android:id="@+id/nav_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_you" />

        <Button
            android:id="@+id/nav_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_contacts" />
    </LinearLayout>

</LinearLayout>